<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Simple Weather App</string>

    <string name="maps_api_key" tools:ignore="TypographyDashes">AIzaSyCJL0uusEkI_n6gnQKqvPxwGzDsn10-2oY</string>

    <string name="celsius_symbol">°C</string>

    <string name="select_location_button">Select location</string>
    <string name="show_hourly_forecast_button">Show hourly forecast</string>
    <string name="show_weekly_forecast_button">Show weekly forecast</string>
    <string name="confirm_selection_button">Select</string>
    <string name="back_button">Back</string>
</resources>