<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_margin="10sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/selectLocationButton"
            style="@style/LargeButton"
            android:layout_width="wrap_content"
            android:text="@string/select_location_button" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30sp"
            android:layout_marginTop="30sp"
            android:layout_marginBottom="14sp"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="14sp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20sp"
            app:contentPadding="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:outlineProvider="none">

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="30sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10sp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/gray"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/black"
                        android:textSize="60sp" />

                    <TextView
                        android:id="@+id/celsius_symbol"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="10sp"
                        android:fontFamily="sans-serif"
                        android:text="@string/celsius_symbol"
                        android:textColor="@color/black"
                        android:textSize="34sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:importantForAccessibility="no" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAlignment="center"
                    android:textColor="@color/gray"
                    android:textSize="20sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="14sp"
            android:text="@string/show_hourly_forecast_button" />

        <Button
            style="@style/LargeButton"
            android:layout_width="match_parent"
            android:layout_marginBottom="14sp"
            android:text="@string/show_weekly_forecast_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>